Revisi-revisi kecil

--- a/enroll.html
+++ b/enroll.html
@@ -61,10 +61,10 @@
         <form class="form-add">
                 <div class="col-8">
                     <div class="form-group">
-                        <p>Nama Kelas</p>
-                        <p>Nama Pengajar</p>
-                        <label>Enrolment key</label>
-                        <input type="text" class="form-control w-50">
+                      <p>Kelas: <strong>Kalkulus II</strong></p>
+                      <p>Pengajar: <strong>Bambang</strong></p>
+                        <label for="enrollment-key">Enrollment key</label>
+                        <input id="enrollment-key" name="enrollment-key" type="text" class="form-control w-50">
                     </div>
                     </div>
                     <div class="col-1 align-middle text-center">
