--- a/probs_add.html
+++ b/probs_add.html
@@ -86,7 +86,7 @@
                     <div class="form-check"><input class="form-check-input" type="checkbox" id="JawabanBenar-D"><label class="form-check-label" for="formCheck-1" style="color: rgb(0,0,0);">Jawaban benar</label></div>
                 </form>
             </div>
-            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: rgb(0,255,71);margin-right: 50%;">Simpan</button></div>
+            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: #00ffc2;margin-right: 50%;">Simpan</button></div>
             <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice"
                 style="margin-top: 29px;"><button class="btn btn-primary button-delete transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,62,50);">Hapus</button></div>
             <div class="col">
