--- a/probs_exam-quiz.html
+++ b/probs_exam-quiz.html
@@ -46,7 +46,7 @@
                         style="background-color: rgb(9,177,236);"><a class="dropdown-item question-no-item" role="presentation" id="1" href="#">1</a><a class="dropdown-item question-no-item" role="presentation" id="add-no-item" href="#">Tambahkan</a></div>
                 </div>
             </div>
-            <div class="col-12 col-md-7 d-inline-flex flex-column justify-content-center align-items-center align-content-center align-self-center add-image" style="padding: 50px 15px;/*padding-top: 0px;*/"><img src="assets/img/CodeCogsEqn%20(3).png"></div>
+            <div class="col-12 col-md-7 d-inline-flex flex-column justify-content-center align-items-center align-content-center align-self-center add-image" style="padding: 50px 15px;/*padding-top: 0px;*/"><img src="./assets/img/CodeCogsEqn-3.png"></div>
             <div class="col-12 col-md-4 d-xl-flex justify-content-xl-start align-items-xl-center question" style="font-size: 20px;background-color: rgba(255,255,255,0);text-align: center;padding: 0px 15px;">
                 <p style="background-color: #ffffff;padding: 20px;border-radius: 10px;border-style: none;">Nilai x yang memenuhi persamaan kuadrat berikut adalah?</p>
             </div>
@@ -62,9 +62,9 @@
             <div class="col-11 col-md-5 d-inline-flex flex-row align-items-center align-content-start flex-nowrap align-items-xl-center question-choice" style="margin-top: 0px;padding: 25px 15px;background-color: #ffffff;border-style: solid;border-radius: 96px;color: rgb(0,0,0);margin-bottom: 5px;margin-left: 10px;"><input type="checkbox" style="margin-right: 0px;margin-bottom: 0px;width: 20px;height: 20px;margin-left: 20px;">
                 <p class="d-xl-flex" style="font-size: 20px;color: rgb(0,0,0);margin-bottom: 0px;padding-right: 0px;padding-left: 0px;padding-bottom: 2px;margin-left: 20px;">-1</p>
             </div>
-            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: rgb(9,177,236);margin-right: 50%;">Simpan</button></div>
-            <div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice"
-                style="margin-top: 29px;"><button class="btn btn-primary button-delete transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,15,0);">Hapus</button></div>
+            <div class="col-6 d-inline-flex flex-row align-items-center align-content-center flex-nowrap question-choice" style="margin-top: 29px;"><button class="btn btn-primary button-submit transition" type="button" style="color: rgb(0,0,0);background-color: rgb(9,177,236);margin-right: 50%;">Kumpulkan</button></div>
+            <!--<div class="col-6 d-inline-flex flex-row align-items-start align-content-start flex-nowrap question-choice"-->
+                <!--style="margin-top: 29px;"><button class="btn btn-primary button-delete transition" id="remove-no-item" type="button" style="margin-right: 50%;color: rgb(0,0,0);background-color: rgb(255,15,0);">Hapus</button></div>-->
             <div class="col">
                 <div></div>
             </div>
