--- a/course_click.html
+++ b/course_click.html
@@ -39,9 +39,14 @@
     </div>
     <div class="container" style="padding-right: 30px;">
         <h1 style="margin-top: 100px;">Kelas &gt; Kalkulus II</h1>
-        <div id="content" style="margin-top: 50px;">
-            <div id="img" class="col-2"><img src="assets/img/calculus.PNG" style="width: 200px;" alt="gambar kalkulus"></div>
-            <div class="col-6"></div>
+        <div id="content" class="row" style="margin-top: 30px;">
+            <div class="text-center col-3"><img class="rounded float-none" src="assets/img/calculus.PNG" alt="kalkulus" style="margin-right: 10px;"></div>
+            <div class="justify-content-between col-5" id="Judul">
+                <h2 class="text-left">Kalkulus II</h2>
+                <p class="text-secondary">Oleh John F Kennedy</p>
+                <p>Mempelajari bagaimana kalkulus bekerja.&nbsp;</p>
+                <p><i class="fa fa-thumbs-up"></i>&nbsp;12k ulasan lebih</p>
+            </div>
             <div class="d-flex flex-column align-items-center col-4" id="button-container"><button class="btn btn-success" type="button"><strong>Daftar</strong></button><button class="btn btn-success" type="button"><strong>Materi</strong></button><button class="btn btn-success" type="button">Kuis</button></div>
         </div>
         <div id="detail-content" style="margin-top: 50px;">
