Benerin link go to course

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Kalkulus II</h4>
                             <p class="card-text">329 orang rekomendasi kelas ini</p>
-                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                            <p class="text-right" style="font-size: 12px;">John F Kennedy</p><a class="btn btn-outline-primary" href="course_click.html">Lihat Kelas</a></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
@@ -83,7 +83,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Kalkulus II</h4>
                             <p class="card-text">329 orang rekomendasi kelas ini</p>
-                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                            <p class="text-right" style="font-size: 12px;">John F Kennedy</p><a class="btn btn-outline-primary" href="course_click.html">Lihat Kelas</a></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
@@ -91,7 +91,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Kalkulus II</h4>
                             <p class="card-text">329 orang rekomendasi kelas ini</p>
-                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                            <p class="text-right" style="font-size: 12px;">John F Kennedy</p><a class="btn btn-outline-primary" href="course_click.html">Lihat Kelas</a></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="padding: 10px;padding-top: 15px;padding-bottom: 15px;">
@@ -99,7 +99,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Kalkulus II</h4>
                             <p class="card-text">329 orang rekomendasi kelas ini</p>
-                            <p class="text-right" style="font-size: 12px;">Bambang Sutrisno, S.T M.T</p><a class="btn btn-outline-primary" href="#">Lihat Kelas</a></div>
+                            <p class="text-right" style="font-size: 12px;">John F Kennedy</p><a class="btn btn-outline-primary" href="course_click.html">Lihat Kelas</a></div>
                     </div>
                 </div>
             </div>
