--- a/course.html
+++ b/course.html
@@ -2,6 +2,15 @@
 <html>
 
 <style>
+    .kontener {
+        align-items: center;
+        width: 90%;
+        height: 100px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 100px;
+    }
     .guru {
         height:60px;
         width: 60px;
@@ -13,23 +22,23 @@
         background-size: cover;
     }
     .buat {
+        height: 40px;
         background-color: #5aca80;
         border-radius: 30px;
         color: white;
         text-transform: uppercase;
         border: none;
-        padding: 5px 10px 5px 10px;
         box-shadow: 0 5px 20px rgba(0,0,0,0.19), 0 3px 6px rgba(0,0,0,0.23);
-        margin: auto 550px 
+        margin: 35px 0 0 0;
     }
     .buat:hover {
         transform: scale(1.1);
     }
     .kelas {
-        margin: 2em 0 0 3em;
         font-size: 50px;
         border: none;
         background-color: #E2E1E1;
+        margin: auto 140px;
     }
     .kursus {
         margin: 1em 0 0 5em;
@@ -41,13 +50,19 @@
     width: 80%;
     border: 1px solid #ccc;
     border-radius: 30%;
-    margin: auto;
+    margin: auto 140px;
     height: 20em;
-    margin-top: 2em;
     background-image: url("https://i.pinimg.com/originals/a4/8c/5c/a48c5c6d31119800605ef0de228e4631.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 70%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    }
+    .word-container {
+        display: flex;
+        flex-direction: column;
     }
     .judul {
         font-size: 30px;
@@ -70,6 +85,10 @@
     .card-1:hover {
         transform: scale(1.02);
     }
+    .button-container {
+        display: flex;
+        justify-content: space-between;
+    }
     .next-button {
         background-image: url("https://w7.pngwing.com/pngs/336/105/png-transparent-arrow-free-content-quiver-arrow-line-s-angle-text-bow-and-arrow.png");
         background-color: black;
@@ -78,9 +97,7 @@
         height: 40px;
         width: 40px;
         border-radius: 50%;
-        position: absolute;
         border: none;
-        margin: -3em 2em 2em 10em;
     }
     .next-button-right {
         background-image: url("https://w7.pngwing.com/pngs/336/105/png-transparent-arrow-free-content-quiver-arrow-line-s-angle-text-bow-and-arrow.png");
@@ -90,10 +107,7 @@
         height: 40px;
         width: 40px;
         border-radius: 50%;
-        position: absolute;
-        border: none;
-        margin: -3em 2em 2em 10em;
-        margin-left: 82em; 
+        border: none; 
         transform: scaleX(-1);
     }
     .next-button:hover {
@@ -146,16 +160,22 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
-    <button href="#" class="kelas">Kelas</button>
-    <button class="buat">Buat Kelas</button>
+    <div class="kontener">
+        <button href="#" class="kelas">Kelas</button>
+        <button class="buat">Buat Kelas</button>
+    </div>
     <div>
-        <button class="card">
-            <div style="color: white; opacity: 0.7; font-size: 45px; font-weight: bold; margin-left: 30px;">Rekomendasi Untukmu</div>
-            <div style="color: white; opacity: 0.7; font-size: 30px; margin: 130px 0 0 30px;">Vector Art Illustration</div>
-            <div style="color: white; opacity: 0.7; font-size: 20px; margin: 2px 0 0 30px;">Cara menggunakan Adobe Illustrator untuk membuat vector art</div>
-            <button class="next-button"></button>
-            <button class="next-button-right"></button>
-        </button>
+        <div class="card">
+            <div class="word-container">
+                <div style="color: white; opacity: 0.7; font-size: 45px; font-weight: bold; margin-left: 30px;">Rekomendasi Untukmu</div>
+                <div style="color: white; opacity: 0.7; font-size: 30px; margin: 90px 0 0 30px; position: relative;">Vector Art Illustration</div>
+                <div style="color: white; opacity: 0.7; font-size: 20px; margin-left: 30px;">Cara menggunakan Adobe Illustrator untuk membuat vector art</div>
+            </div>
+            <div class="button-container">
+                <button class="next-button"></button>
+                <button class="next-button-right"></button>
+            </div>
+        </div>
     </div>
     <div class="kursus">Kursus Populer</div>
     <div>
