Nambahin link-link ke file-file yang membutuhkan

--- a/addcourse.html
+++ b/addcourse.html
@@ -56,7 +56,7 @@
     </div>
     <div class="content-wrapper">
         <div class="breadcrumb">
-            <h1>Kelas > Buat Kelas</h1>
+          <h1><a href="./course.html" style="color:black !important; text-decoration:none;">Kelas</a> > Buat Kelas</h1>
         </div>
         <form class="form-add">
             <div class="container">
