--- a/course.html
+++ b/course.html
@@ -156,65 +156,81 @@
             </div>
         </nav>
     </div>
+
+    <div class="kontener">
+        <button href="#" class="kelas">Kelas</button>
+        <a href="./addcourse.html">
+          <button class="buat" href="./addcourse.html">Buat Kelas</button>
+        </a>
+    </div>
+    <div>
+        <a style="text-decoration: none;" href="./course_click.html">
+            <div class="card">
+                <div class="word-container">
+                    <div style="color: white; opacity: 0.7; font-size: 45px; font-weight: bold; margin-left: 30px;">Rekomendasi Untukmu</div>
+                    <div style="color: white; opacity: 0.7; font-size: 30px; margin: 90px 0 0 30px; position: relative;">Vector Art Illustration</div>
+                    <div style="color: white; opacity: 0.7; font-size: 20px; margin-left: 30px;">Cara menggunakan Adobe Illustrator untuk membuat vector art</div>
+                </div>
+        </a>
+      <div class="button-container">
+          <button class="next-button"></button>
+          <button class="next-button-right"></button>
+      </div>
+  </div>
+    </div>
+    <div class="kursus">Kursus Populer</div>
+    <div>
+        <a href="./course_click.html">
+            <button class="card-1" href="#">
+                <h1 class="judul" >Kalkulus II</h1>
+                <p class="isi">329 orang merekomendasikan course ini.</p>
+                <div class="guru">
+                    <div style="position: absolute; margin: 1em 0 0 4em;">Jono</div>
+                </div>
+            </button>
+        </a>
+        <a href="./course_click.html">
+            <button class="card-1" href="#">
+                <h1 class="judul" >Kalkulus II</h1>
+                <p class="isi">329 orang merekomendasikan course ini.</p>
+                <div class="guru">
+                    <div style="position: absolute; margin: 1em 0 0 4em;">Jono</div>
+                </div>
+            </button>
+        </a>
+        <a href="./button">
+            <button class="card-1" href="#">
+                <h1 class="judul" >Kalkulus II</h1>
+                <p class="isi">329 orang merekomendasikan course ini.</p>
+                <div class="guru">
+                    <div style="position: absolute; margin: 1em 0 0 4em;">Claude</div>
+                </div>
+            </button>
+        </a>
+        <a href="./button">
+            <button class="card-1" href="#">
+                <h1 class="judul" >Kalkulus II</h1>
+                <p class="isi">329 orang merekomendasikan course ini.</p>
+                <div class="guru">
+                    <div style="position: absolute; margin: 1em 0 0 4em;">Clyde</div>
+                </div>
+            </button>
+        </a>
+        <a href="./button">
+            <button class="card-1" href="#">
+                <h1 class="judul" >Kalkulus II</h1>
+                <p class="isi">329 orang merekomendasikan course ini.</p>
+                <div class="guru">
+                    <div style="position: absolute; margin: 1em 0 0 4em;">Zoro</div>
+                </div>
+            </button>
+        </a>
+    </div>
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
-    <div class="kontener">
-        <button href="#" class="kelas">Kelas</button>
-        <button class="buat">Buat Kelas</button>
-    </div>
-    <div>
-        <div class="card">
-            <div class="word-container">
-                <div style="color: white; opacity: 0.7; font-size: 45px; font-weight: bold; margin-left: 30px;">Rekomendasi Untukmu</div>
-                <div style="color: white; opacity: 0.7; font-size: 30px; margin: 90px 0 0 30px; position: relative;">Vector Art Illustration</div>
-                <div style="color: white; opacity: 0.7; font-size: 20px; margin-left: 30px;">Cara menggunakan Adobe Illustrator untuk membuat vector art</div>
-            </div>
-            <div class="button-container">
-                <button class="next-button"></button>
-                <button class="next-button-right"></button>
-            </div>
-        </div>
-    </div>
-    <div class="kursus">Kursus Populer</div>
-    <div>
-        <button class="card-1" href="#">
-            <h1 class="judul" >Kalkulus II</h1>
-            <p class="isi">329 orang merekomendasikan course ini.</p>
-            <div class="guru">
-                <div style="position: absolute; margin: 1em 0 0 4em;">Bambang</div>
-            </div>
-         </button>
-         <button class="card-1" href="#">
-            <h1 class="judul" >Kalkulus II</h1>
-            <p class="isi">329 orang merekomendasikan course ini.</p>
-            <div class="guru">
-                <div style="position: absolute; margin: 1em 0 0 4em;">Jono</div>
-            </div>
-         </button>
-         <button class="card-1" href="#">
-            <h1 class="judul" >Kalkulus II</h1>
-            <p class="isi">329 orang merekomendasikan course ini.</p>
-            <div class="guru">
-                <div style="position: absolute; margin: 1em 0 0 4em;">Claude</div>
-            </div>
-         </button>
-         <button class="card-1" href="#">
-            <h1 class="judul" >Kalkulus II</h1>
-            <p class="isi">329 orang merekomendasikan course ini.</p>
-            <div class="guru">
-                <div style="position: absolute; margin: 1em 0 0 4em;">Clyde</div>
-            </div>
-         </button>
-         <button class="card-1" href="#">
-            <h1 class="judul" >Kalkulus II</h1>
-            <p class="isi">329 orang merekomendasikan course ini.</p>
-            <div class="guru">
-                <div style="position: absolute; margin: 1em 0 0 4em;">Zoro</div>
-            </div>
-         </button>
-    </div>
 </body>
 
 </html>
