--- a/enroll.html
+++ b/enroll.html
@@ -28,6 +28,10 @@
             background: #fff;
             border-radius: 10px;
         }
+
+        .btn-submit {
+            width: 100px;
+        }
     </style>
 </head>
 <body>
@@ -64,12 +68,12 @@
                       <p>Kelas: <strong>Kalkulus II</strong></p>
                       <p>Pengajar: <strong>Bambang</strong></p>
                         <label for="enrollment-key">Enrollment key</label>
-                        <input id="enrollment-key" name="enrollment-key" type="text" class="form-control w-50">
+                        <input id="enrollment-key" name="enrollment-key" type="text" class="form-control" style="width: 150px;">
                     </div>
                     </div>
                     <div class="col-1 align-middle text-center">
                         <div class="mb-2">
-                            <button type="submit" class="btn btn-primary">Enrol Me</button>
+                          <a href="./course_click.html"><button type="submit" class="btn btn-primary btn-submit">Enroll Me</button></a>
                         </div>
                     </div>
                 </div>
