--- a/forum_add_question.html
+++ b/forum_add_question.html
@@ -79,7 +79,7 @@
     <br><br><br><br><br>
 
     <div class="container">
-        <h2><strong>Forum</strong></h2>
+      <a href="./forumlandingpage.html" style="color: black; text-decoration: none;"><h2><strong>Forum</strong></h2></a>
     </div>
     <!-- pilihan menu -->
     <div class="container"><strong>
@@ -87,7 +87,7 @@
                 <button class="button button1" style="border: none;color: black;padding: 5px 15px;text-align: center;text-decoration: none;cursor: pointer;border-radius: 30px;background-color: #48D1CC;"><strong>Post</strong></button>&emsp;
                 <button class="button button2" style="border: none;color: black;padding: 5px 15px;text-align: center;text-decoration: none;cursor: pointer;border-radius: 30px;background-color:#40E0D0;"><strong>Gambar</strong></button>&emsp;
                 <button class="button button3" style="border: none;color: black;padding: 5px 15px;text-align: center;text-decoration: none;cursor: pointer;border-radius: 30px;background-color: #AFEEEE"><strong>Tautan</strong></button>&emsp;
-                <a href="#MyCourse" style="color: black; float: right;"><i class="fa fa-arrow-left"></i> Kembali ke Forum</a>
+                <a href="./forumlandingpage.html" style="color: black; float: right;"><i class="fa fa-arrow-left"></i> Kembali ke Forum</a>
             </nav></strong>
     </div>
     <br><br>
@@ -95,7 +95,8 @@
     <!-- isi form pertanyaan -->
     <div class="container">
         <nav id="isi" style="background-color: white; Padding : 10px; border-radius:25px;">
-            <form action="action_page.php">
+            <!--<form action="action_page.php">-->
+            <form>
                 <div class="row">
                     <div class="col-75">
                         <input type="text" id="fname" name="judul" placeholder="Masukan judul postingan di sini">
