--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             id="bottom-part">
             <div class="container arrow-button">
                 <div class="row">
-                    <div class="col"><button class="btn btn-link btn-block bounce animated infinite arrow-btn" type="button" style="color: rgb(255,255,255);"><i class="icon ion-ios-arrow-down" style="color: rgb(0,0,0);font-size: 30px;"></i></button></div>
+                    <div class="col"><a href="#below-base"><button class="btn btn-link btn-block bounce animated infinite arrow-btn" type="button" style="color: rgb(255,255,255);"><i class="icon ion-ios-arrow-down" style="color: rgb(0,0,0);font-size: 30px;"></i></button></a></div>
                 </div>
             </div>
     </div>
