--- a/my-course.html
+++ b/my-course.html
@@ -225,27 +225,36 @@
             </div>
                 
         </div>
-        <div></div>
-        <button class="card-1" href="#">
-           <h1 class="judul" >Bercocok Tanam</h1>
-           <p class="isi">Mempelajari bagaimana cara agar sebuah kebun tertata rapi dan indah.</p>
-        </button>
-        <button class="card-2" href='#'>
-            <h1 class="judul" >Cat Air</h1>
-            <p class="isi">Membuat seni dengan cat air. Proporsi cat dan air, tips dan trik dengan cat air.</p>
-        </button>
-        <button class="card-3" href='#'>
-            <h1 class="judul" >Salad 101</h1>
-            <p class="isi">Mempelajari cara untuk membuat berbagai salad dengan banyak <i>dressing</i>.</p>
-        </button>
-        <button class="card-4" href='#'>
-            <h1 class="judul" >Memahami Orang Lain</h1>
-            <p class="isi">Bagaimana kita bisa mendengar dan memahami orang lain.</p>
-        </button>
-        <button class="card-5" href='#'>
-            <h1 class="judul" >Mengolah Tanah Liat</h1>
-            <p class="isi">Mengolah tanah liat menjadi bentuk yang indah. Itulah <i>pottery</i>.</p>
-        </button>
+        <a href="./course_click.html">
+            <button class="card-1" href="#">
+               <h1 class="judul" >Bercocok Tanam</h1>
+               <p class="isi">Mempelajari bagaimana cara agar sebuah kebun tertata rapi dan indah.</p>
+            </button>
+        </a>
+        <a href="./course_click.html">
+            <button class="card-2" href='#'>
+                <h1 class="judul" >Cat Air</h1>
+                <p class="isi">Membuat seni dengan cat air. Proporsi cat dan air, tips dan trik dengan cat air.</p>
+            </button>
+        </a>
+        <a href="./course_click.html">
+            <button class="card-3" href='#'>
+                <h1 class="judul" >Salad 101</h1>
+                <p class="isi">Mempelajari cara untuk membuat berbagai salad dengan banyak <i>dressing</i>.</p>
+            </button>
+        </a>
+        <a href="./course_click.html">
+            <button class="card-4" href='#'>
+                <h1 class="judul" >Memahami Orang Lain</h1>
+                <p class="isi">Bagaimana kita bisa mendengar dan memahami orang lain.</p>
+            </button>
+        </a>
+        <a href="./course_click.html">
+            <button class="card-5" href='#'>
+                <h1 class="judul" >Mengolah Tanah Liat</h1>
+                <p class="isi">Mengolah tanah liat menjadi bentuk yang indah. Itulah <i>pottery</i>.</p>
+            </button>
+        </a>
     </div>
 </body>
 
