--- a/CourseMaterial.html
+++ b/CourseMaterial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Course material</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Patua+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Search.css">
@@ -37,10 +37,9 @@
     </div>
     </nav>
     </div>
-    <div>
-        <div class="container"></div>
-        <div class="container" style="padding: 70px;">
-            <h4>Course &gt; Kalkulus 2 &gt; Materi</h4>
+    <div style="margin-top: 85px;">
+        <div class="container">
+            <h4><a href="#" style="color: black; text-decoration: none;">Course</a><span>&nbsp;&gt;&nbsp;</span><a href="#" style="color: black; text-decoration: none;">Kalkulus II</a><span>&nbsp;&gt; Materi</span></h4>
             <div class="row">
                 <div class="col-12">
                     <p><img src="assets/img/Video.png"><strong>3 Video&nbsp;&nbsp;</strong><button class="btn btn-success btn-sm" type="button">Tambah</button></p>
