--- a/course_click.html
+++ b/course_click.html
@@ -38,20 +38,23 @@
     </nav>
     </div>
     <div class="container" style="padding-right: 30px;">
-        <h1 style="margin-top: 100px;">Kelas &gt; Kalkulus II</h1>
-        <div id="content" class="row" style="margin-top: 30px;">
-            <div class="text-center col-3"><img class="rounded float-none" src="assets/img/calculus.PNG" alt="kalkulus" style="margin-right: 10px;"></div>
-            <div class="justify-content-between col-5" id="Judul">
+        <h1 style="margin-top: 100px;font-size: 36px;"><a href="./course.html" style="color: rgb(0,0,0); text-decoration: none;">Kelas</a><span style="margin-left: 8px;">&gt; Kalkulus II</span></h1>
+        <div class="row" id="content">
+            <div class="col-12 col-md-4 col-lg-3 d-flex justify-content-center"><img class="rounded float-none" src="assets/img/calculus.PNG" alt="kalkulus" style="margin-right: 10px;"></div>
+            <div class="col-9 col-md-5 col-lg-6" id="judul">
                 <h2 class="text-left">Kalkulus II</h2>
                 <p class="text-secondary">Oleh John F Kennedy</p>
                 <p>Mempelajari bagaimana kalkulus bekerja.&nbsp;</p>
                 <p><i class="fa fa-thumbs-up"></i>&nbsp;12k ulasan lebih</p>
             </div>
-            <div class="d-flex flex-column align-items-center col-4" id="button-container"><button class="btn btn-success" type="button"><strong>Daftar</strong></button><button class="btn btn-success" type="button"><strong>Materi</strong></button><button class="btn btn-success" type="button">Kuis</button></div>
+            <div class="col-3" id="button-container"><a href="./enroll.html" style="width: auto;"><button class="btn btn-success" type="button" style="width: inherit;"><strong>Daftar</strong></button></a><a href="./CourseMaterial.html"><button class="btn btn-success" type="button" style="width: 75px;"><strong>Materi</strong></button></a>
+                <a
+                    href="./probs_exam-quiz.html"><button class="btn btn-success" type="button" style="width: 75px;">Kuis</button></a>
+            </div>
         </div>
         <div id="detail-content" style="margin-top: 50px;">
-            <div class="row">
-                <div class="col col-8" id="tentang-kalkulus" style="padding: 30px;background-color: #eeeeee;margin-right: 30px;">
+            <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                <div class="col-12 col-lg-7 col-8" id="tentang-kalkulus" style="padding: 30px;background-color: #eeeeee;margin-right: 30px;">
                     <h6><strong>Tentang kelas ini</strong></h6>
                     <p style="font-size: 13px;line-height: 18px;text-align: justify;">Kalkulus (bahasa latin calculus, artinya "batu kecil:. untuk menghitung) adalah cabang ilmu matematika yang mencakup limit, turunan, integral, dan deret tak terhingga. Kalkulus adalah ilmu yang mempelajari perubahan, sebagaimana geomteri
                         yang mempelajari bentuk dan alajabar yang mempelajari operasi dan penerapannya untuk memecahkan suatu persamaan. Kalkulus memiliki aplikasi yang luas dalam bidang-bidang sains, ekonomi, dan teknik, serta dapat memecahkan berbagai
@@ -66,7 +69,7 @@
                     </ul>
                     <h6><strong>Pengajar</strong></h6>
                 </div>
-                <div class="col text-center" id="konten-tersedia" style="background-color: #eeeeee;">
+                <div class="col-12 col-lg-4 text-center" id="konten-tersedia" style="background-color: #eeeeee;">
                     <h5 class="text-center" style="margin-top: 10px;"><strong>Apa yang kamu dapat</strong></h5>
                     <h6 style="margin-top: 25px;font-size: 30px;">&nbsp;<i class="fa fa-youtube-play"></i> 5 video</h6>
                     <h6 style="margin-top: 20px;font-size: 30px;"><i class="fa fa-file"></i>&nbsp;6 Presentasi</h6>
