--- a/forum-click.html
+++ b/forum-click.html
@@ -37,10 +37,14 @@
     </div>
     </nav>
     </div>
-    <div class="container">
+    <div class="container" style="margin-top: 80px">
         <div class="container"></div>
-        <h1 id="forum-heading" style="margin-top: 10px;">Forum</h1>
-        <div class="container" id="forum-box1" style="margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 252px;"><span class="d-flex" id="forum-box1-text" style="padding-top: 0px;">Home / Forum / Kalkulus / Persamaan Diferensial<br></span></div>
+        <a href="./forumlandingpage.html" style="color: black; text-decoration: none"><h1 id="forum-heading" style="margin-top: 10px;">Forum</h1>
+        <div class="container" id="forum-box1" style="margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 252px;"><span class="d-flex" id="forum-box1-text" style="padding-top: 0px;">
+            <a href="./index.html" style="color:black; text-decoration: none">Home</a>
+            /<a href="./forumlandingpage.html" style="color:black; text-decoration: none">Forum</a>
+            /<a href="#" style="color:black; text-decoration: none">Persamaan Diferensial</a>
+            <br></span></div>
         <div class="container-fluid box2" id="forum-box-1" style="margin-top: 30px;margin-left: 0px;margin-right: 0px;padding: 0;padding-top: 18px;padding-right: 0px;padding-left: 20px;text-align: left;max-width: 90%;padding-bottom: 15px;width: 964px;height: 230px;">
             <div style="width: 315px;"><p class="gray-text">Dipublikasikan oleh Alex, kemarin pukul 19.04</p>
 <p class='forum-title'> Persamaan Diferensial </p>
