Benerin sedikit layout laman course teacher dan laman mengerjakan soal

--- a/course_click-teacher.html
+++ b/course_click-teacher.html
@@ -47,10 +47,7 @@
                 <p>Mempelajari bagaimana kalkulus bekerja.&nbsp;</p>
                 <p><i class="fa fa-thumbs-up"></i>&nbsp;12k ulasan lebih</p>
             </div>
-            <div class="col-3" id="button-container"><a href="./enroll.html" style="width: auto;"><button class="btn btn-success" type="button" style="width: inherit;"><strong>Daftar</strong></button></a><a href="./CourseMaterial.html"><button class="btn btn-success" type="button" style="width: 75px;"><strong>Materi</strong></button></a>
-                <a
-                    href="./probs_add.html"><button class="btn btn-success" type="button" style="width: 100px;">Buat Soal</button></a>
-            </div>
+            <div class="col-3" id="button-container"><a href="./CourseMaterial.html"><button class="btn btn-success" type="button" style="width: 75px;"><strong>Materi</strong></button></a><a href="./probs_add.html"><button class="btn btn-success" type="button" style="width: 100px;">Buat Soal</button></a></div>
         </div>
         <div id="detail-content" style="margin-top: 50px;">
             <div class="row" style="margin-left: 0px;margin-right: 0px;">
